# game-of-life-sdl3

./: .gitignore  CMakeLists.txt  README.md  fps.h  main.cpp
